RESOLVED FIXED186429
Send display link IPC message from display link thread.
https://bugs.webkit.org/show_bug.cgi?id=186429
Summary Send display link IPC message from display link thread.
Per Arne Vollan
Reported 2018-06-08 07:19:15 PDT
When the display link callback is firing on the display link thread in the UI process, we schedule a function to be called on the main thread to send the IPC message to the WebContent process. Since Connection::send is thread-safe, we can just send the message from the display link thread.
Attachments
Patch (7.44 KB, patch)
2018-06-08 07:21 PDT, Per Arne Vollan
no flags
Patch (7.44 KB, patch)
2018-06-08 08:20 PDT, Per Arne Vollan
no flags
Patch (8.47 KB, patch)
2018-06-08 08:58 PDT, Per Arne Vollan
no flags
Patch (3.37 KB, patch)
2018-06-08 09:55 PDT, Per Arne Vollan
ggaren: review+
Patch for landing (3.32 KB, patch)
2018-06-08 10:21 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2018-06-08 07:21:53 PDT
Per Arne Vollan
Comment 2 2018-06-08 08:20:23 PDT
EWS Watchlist
Comment 3 2018-06-08 08:22:58 PDT
Attachment 342265 [details] did not pass style-queue: ERROR: Source/WebKit/UIProcess/mac/DisplayLink.h:36: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Per Arne Vollan
Comment 4 2018-06-08 08:58:17 PDT
Per Arne Vollan
Comment 5 2018-06-08 09:55:54 PDT
Radar WebKit Bug Importer
Comment 6 2018-06-08 09:56:46 PDT
Geoffrey Garen
Comment 7 2018-06-08 10:02:41 PDT
Comment on attachment 342280 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342280&action=review r=me > Source/WebKit/UIProcess/mac/DisplayLink.cpp:37 > - > + Please revert this whitespace change to keep svn history nice. > Source/WebKit/UIProcess/mac/DisplayLink.cpp:102 > + DisplayLink* displayLink = reinterpret_cast<DisplayLink*>(data); This can be static_cast. It's slightly better to static_cast because the compiler still enforces that you're not doing something weirder like turning a float or an int or a CVTimeStamp* into a DisplayLink*.
Per Arne Vollan
Comment 8 2018-06-08 10:06:51 PDT
(In reply to Geoffrey Garen from comment #7) > Comment on attachment 342280 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=342280&action=review > > r=me > > > Source/WebKit/UIProcess/mac/DisplayLink.cpp:37 > > - > > + > > Please revert this whitespace change to keep svn history nice. > > > Source/WebKit/UIProcess/mac/DisplayLink.cpp:102 > > + DisplayLink* displayLink = reinterpret_cast<DisplayLink*>(data); > > This can be static_cast. It's slightly better to static_cast because the > compiler still enforces that you're not doing something weirder like turning > a float or an int or a CVTimeStamp* into a DisplayLink*. Thanks for reviewing! I will update the patch before landing.
Per Arne Vollan
Comment 9 2018-06-08 10:21:44 PDT
Created attachment 342284 [details] Patch for landing
WebKit Commit Bot
Comment 10 2018-06-08 11:30:07 PDT
Comment on attachment 342284 [details] Patch for landing Clearing flags on attachment: 342284 Committed r232632: <https://trac.webkit.org/changeset/232632>
Note You need to log in before you can comment on or make changes to this bug.